logging/loki/test/test-app-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loki-test-route
  namespace: monitoring
spec:
  parentRefs:
  - name: rancher-gateway
    namespace: cattle-system
  hostnames:
  - loki-test.prakriti.website
  rules:
  - backendRefs:
    - name: service-a
      port: 8080
